Sorting done! Looker for help on the misalignment issue

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -321,7 +321,7 @@
   flex-direction: column;
   margin-left: 0px;
   margin-right: 0px;
-  min-width: 1050px;
+  min-width: 750px;
 }
 
 .pubs {
@@ -329,7 +329,7 @@
   flex-direction: column;
   margin-left: 0px;
   margin-right: 0px;
-  min-width: 1000px;
+  min-width: 750px;
 }
 
 
